# IEEE754_binary_encoder

./: .gitignore  IEEE754_binary_encoder.c  IEEE754_binary_encoder.h  LICENSE  README.md
.github/workflows/: build.yml
tests/: CMakeLists.txt  main.cpp
